--- a/TopShooter/Config/DefaultEngine.ini
+++ b/TopShooter/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Main.Main
 EditorStartupMap=/Game/Levels/Main.Main
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_GameMode_01.BP_GameMode_01_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
