--- a/TopShooter/Config/DefaultEngine.ini
+++ b/TopShooter/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Main.Main
-EditorStartupMap=/Game/Levels/Main.Main
+GameDefaultMap=/Game/Levels/Level1.Level1
+EditorStartupMap=/Game/Levels/Level1.Level1
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_GameMode_01.BP_GameMode_01_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
